@@ -44,7 +44,7 @@ public class PasswordGrantAuthenticationConverter implements AuthenticationConve
             if (!key.equals(OAuth2ParameterNames.GRANT_TYPE)
                     && !key.equals(OAuth2ParameterNames.CLIENT_ID)
                     && !key.equals(OAuth2ParameterNames.CODE)) {
-                additionalParameters.put(key, value.get(0));
+                additionalParameters.put(key, value.getFirst());
             }
             // @formatter:on
         });
